# Cmac

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md
CmacLib/: CMakeLists.txt
CmacLib/core/include/: CmacLib.h  IAdjustment.h  ICmac.h  IResult.h
CmacLib/core/src/: Adjustment.cpp
CmacLib/include/: Cmac.h  Factory.h  IAdjustment.h  ICmac.h  IPrediction.h  IResult.h
CmacLib/include_internal/: Adjustment.h  Cmac.h  Prediction.h  Result.h
CmacLib/src/: Adjustment.cpp  Cmac.cpp  Factory.cpp  Prediction.cpp  Result.cpp
CmacLib/tests/: CMakeLists.txt  tests.cpp
api/matlab/: ACmacLibEntity.m  AEntity.m  Adjustment.m  AdjustmentMex.cpp  Cmac.m  CmacMex.cpp  Entity.m  Factory.m  FactoryMethods.m  FactoryMex.cpp  Marshaller.m  MarshallerMex.cpp  Prediction.m  PredictionMex.cpp  Result.m  ResultMex.asv  ResultMex.cpp  Serialization.m  SerializationMex.cpp  build.m  test_save.cmac  usage.m  useage.m
api/python/: CMakeLists.txt
api/python/include/: CmacLibWrapper.h
api/python/src/: lib.cpp  pycmaclib.pyi
api/python/tests/: test_cmac.py  test_serializable.py
core/: CMakeLists.txt
core/include/: CmacLib.h  Factory.h  IAdjustment.h  ICmac.h  IMarshaller.h  IPrediction.h  IResult.h  ISerializable.h  ISerialization.h
core/include/cmaclib/: Factory.h  IAdjustment.h  ICmac.h  IMarshaller.h  IPrediction.h  IResult.h  ISerializable.h  ISerialization.h  collections.h  defines.h
core/include_internal/: Adjustment.h  Cmac.h  CmacSerializerTags.h  CmacTagger.h  CmacTags.h  Marshaller.h  Prediction.h  Result.h  Serialization.h
core/include_internal/cmaclib/: Adjustment.h  Cmac.h  Marshaller.h  Prediction.h  Result.h  Serialization.h
core/src/: Adjustment.cpp  Cmac.cpp  Factory.cpp  ISerializable.cpp  Marshaller.cpp  Prediction.cpp  Result.cpp  Serialization.cpp  collections.cpp
langs/matlab/: Factory.m  IAdjustment.m  IPrediction.m  IResult.m  ISerializable.m  ISerialization.m
langs/matlab/+CmacLib/: Adjustment.m  Cmac.m  Create.m  IAdjustment.m  ICmac.m  IPrediction.m  IResult.m  ISerialization.m  Marshaller.m  Prediction.m  Result.m  Serializable.m  Serialization.m
langs/matlab/+CmacLib/+Implementations/: Adjustment.m  Prediction.m  Result.m
langs/matlab/+CmacLib/+Interfaces/: IAdjustment.m  ICmac.m  IMarshaller.m  IPrediction.m  IResult.m  ISerialization.m
matlab/: Cmac.m
scripts/: package_linux.sh  package_win_gnu.bat  package_win_vs.bat
tests/: .gitignore  CMakeLists.txt  CmacTests.cpp  FactoryTests.cpp  HelperTests.cpp  MarshallerTests.cpp  SerializableTests.cpp  expected.cmac  expected_serialized.xml  launch.json  tests.cpp
wrappers/julia/: .gitignore  CMakeLists.txt  Package.toml
wrappers/julia/src/: adjustment.jl  cmac.jl  collections.jl  core.jl  factory.jl  jlcmaclib.jl  marshaller.jl  prediction.jl  result.jl  serializable.jl  serialization.jl
wrappers/julia/tests/: runtests.jl  test_cmac.jl  test_serialization.jl
wrappers/matlab/: AdjustmentMex.cpp  Cmac.m  CmacMex.cpp  Factory.m  FactoryMex.cpp  Marshaller.m  MarshallerMex.cpp  Prediction.m  PredictionMex.cpp  ResultMex.cpp  Serializable.m  SerializationMex.cpp  build.m  usage.m
wrappers/python/: CMakeLists.txt
wrappers/python/src/: lib.cpp  pycmaclib.pyi
wrappers/python/tests/: test_cmac.py  test_serializable.py
